// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`content-error-400 1`] = `
<div
  className="viewport"
>
  <div
    className="wrapper"
  >
    <div
      className="icon"
    />
    <h2
      className="title"
    >
      Несуществующая страница
    </h2>
    <div
      className="message"
    >
      Такой страницы не существует. Проверьте написание адреса — может быть, вы просто ошиблись при наборе. А может быть этой страницы уже нет.
    </div>
  </div>
</div>
`;

exports[`content-error-500 1`] = `
<div
  className="viewport"
>
  <div
    className="wrapper"
  >
    <div
      className="icon"
    />
    <h2
      className="title"
    >
      Произошла ошибка
    </h2>
    <div
      className="message"
    >
      Сервис временно недоступен. Мы уже в курсе и скоро все починим.
Пожалуйста, попробуйте обновить страницу чуть позже.
    </div>
  </div>
</div>
`;

exports[`content-error-file-is-empty 1`] = `
<div
  className="viewport"
>
  <div
    className="wrapper"
  >
    <div
      className="icon"
    />
    <h2
      className="title"
    >
      Этот файл пустой
    </h2>
    <div
      className="message"
    />
  </div>
</div>
`;

exports[`content-error-file-too-big 1`] = `
<div
  className="viewport"
>
  <div
    className="wrapper"
  >
    <div
      className="icon"
    />
    <h2
      className="title"
    >
      Не удалось открыть файл
    </h2>
    <div
      className="message"
    >
      Размер файла превышает 128 МБ, поэтому его нельзя просмотреть в браузере. Вы можете скачать файл и открыть его на компьютере.
    </div>
  </div>
</div>
`;

exports[`content-error-unknown 1`] = `
<div
  className="viewport"
>
  <div
    className="wrapper"
  >
    <div
      className="icon"
    />
    <h2
      className="title"
    >
      Ой, что-то сломалось…
    </h2>
    <div
      className="message"
    >
      Открыть документ не удалось. Пожалуйста, повторите попытку позже.
    </div>
  </div>
</div>
`;
